{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 404,
  "lineage": "29c0e3c9-0e45-f898-d755-2aa26e76b24a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:loadbalancer/app/terraform-demo-alb/3f134f90c01185e1",
            "arn_suffix": "app/terraform-demo-alb/3f134f90c01185e1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-demo-alb-291616235.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:loadbalancer/app/terraform-demo-alb/3f134f90c01185e1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-demo-alb",
            "security_groups": [
              "sg-07f9d3d7554cc18eb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a76d00abbc4cf245"
              },
              {
                "subnet_id": "subnet-0adeed147a3b0e0f9"
              }
            ],
            "subnets": [
              "subnet-0a76d00abbc4cf245",
              "subnet-0adeed147a3b0e0f9"
            ],
            "tags": {
              "Name": "terraform-demo-alb"
            },
            "tags_all": {
              "Name": "terraform-demo-alb"
            },
            "vpc_id": "vpc-00b96594fa5930e0f",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:listener/app/terraform-demo-alb/3f134f90c01185e1/229ce59567f19e36",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:targetgroup/terraform-example-alb-target/efb55dc02a737e4a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:listener/app/terraform-demo-alb/3f134f90c01185e1/229ce59567f19e36",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:loadbalancer/app/terraform-demo-alb/3f134f90c01185e1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.group",
            "aws_security_group.alb",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:listener/app/terraform-demo-alb/3f134f90c01185e1/81a5a93a809cb762",
            "certificate_arn": "arn:aws:acm:ap-south-1:285255536600:certificate/deda71d1-3d56-495f-b937-4235ec9d7cd6",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:targetgroup/terraform-example-alb-target/efb55dc02a737e4a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:listener/app/terraform-demo-alb/3f134f90c01185e1/81a5a93a809cb762",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:loadbalancer/app/terraform-demo-alb/3f134f90c01185e1",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_alb.alb",
            "aws_alb_target_group.group",
            "aws_security_group.alb",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.demo-vpc",
            "tls_private_key.demo",
            "tls_self_signed_cert.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:targetgroup/terraform-example-alb-target/efb55dc02a737e4a",
            "arn_suffix": "targetgroup/terraform-example-alb-target/efb55dc02a737e4a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:targetgroup/terraform-example-alb-target/efb55dc02a737e4a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-example-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00b96594fa5930e0f"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9193b2af5e94997",
            "associate_with_private_ip": "172.16.0.5",
            "association_id": "eipassoc-0e3307b68a38bd7e2",
            "domain": "vpc",
            "id": "eipalloc-0e9193b2af5e94997",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b21c5b0b3f8bc7db",
            "private_dns": "ip-172-16-0-5.ap-south-1.compute.internal",
            "private_ip": "172.16.0.5",
            "public_dns": "ec2-65-0-140-62.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.140.62",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-interface",
            "aws_security_group.alb",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6615d1e95c98aca",
            "arn": "arn:aws:ec2:ap-south-1:285255536600:instance/i-0891841a102df3612",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0891841a102df3612",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-instance",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0b21c5b0b3f8bc7db"
              }
            ],
            "primary_network_interface_id": "eni-0b21c5b0b3f8bc7db",
            "private_dns": "ip-172-16-0-5.ap-south-1.compute.internal",
            "private_ip": "172.16.0.5",
            "public_ip": "65.0.140.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e31b5f3493d3f65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0adeed147a3b0e0f9",
            "tags": {
              "Env": "Test",
              "Name": "demo-server"
            },
            "tags_all": {
              "Env": "Test",
              "Name": "demo-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-093e7141740a3c418"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-interface",
            "aws_security_group.alb",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:285255536600:internet-gateway/igw-0f772745292ad42ff",
            "id": "igw-0f772745292ad42ff",
            "owner_id": "285255536600",
            "vpc_id": "vpc-00b96594fa5930e0f"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:targetgroup/terraform-example-alb-target/efb55dc02a737e4a-20220226172037234800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:285255536600:targetgroup/terraform-example-alb-target/efb55dc02a737e4a",
            "target_id": "i-0891841a102df3612"
          },
          "dependencies": [
            "aws_alb_target_group.group",
            "aws_instance.web",
            "aws_network_interface.web-interface",
            "aws_security_group.alb",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:285255536600:network-interface/eni-0b21c5b0b3f8bc7db",
            "id": "eni-0b21c5b0b3f8bc7db",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ee:4c:10:a0:fc",
            "owner_id": "285255536600",
            "private_ip": "172.16.0.5",
            "private_ip_list": [
              "172.16.0.5"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.0.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-093e7141740a3c418"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0adeed147a3b0e0f9"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:285255536600:route-table/rtb-0adfe7500fe281ef3",
            "id": "rtb-0adfe7500fe281ef3",
            "owner_id": "285255536600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f772745292ad42ff",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f772745292ad42ff",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo"
            },
            "tags_all": {
              "Name": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b96594fa5930e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000a82765fcfe9fab",
            "route_table_id": "rtb-0adfe7500fe281ef3",
            "subnet_id": "subnet-0adeed147a3b0e0f9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.dev-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:285255536600:security-group/sg-07f9d3d7554cc18eb",
            "description": "Terraform load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f9d3d7554cc18eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_alb_security_group",
            "name_prefix": "",
            "owner_id": "285255536600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-example-alb-security-group"
            },
            "tags_all": {
              "Name": "terraform-example-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b96594fa5930e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:285255536600:security-group/sg-093e7141740a3c418",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093e7141740a3c418",
            "ingress": [
              {
                "cidr_blocks": [
                  "134.238.241.116/32"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "134.238.241.116/32"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f9d3d7554cc18eb"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f9d3d7554cc18eb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "285255536600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow http"
            },
            "tags_all": {
              "Name": "allow http"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b96594fa5930e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:285255536600:subnet/subnet-0adeed147a3b0e0f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adeed147a3b0e0f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285255536600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-subnet-1"
            },
            "tags_all": {
              "Name": "demo-subnet-1"
            },
            "vpc_id": "vpc-00b96594fa5930e0f"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:285255536600:subnet/subnet-0a76d00abbc4cf245",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a76d00abbc4cf245",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285255536600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-subnet-2"
            },
            "tags_all": {
              "Name": "demo-subnet-2"
            },
            "vpc_id": "vpc-00b96594fa5930e0f"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:285255536600:vpc/vpc-00b96594fa5930e0f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/22",
            "default_network_acl_id": "acl-0fcefce740f0aed02",
            "default_route_table_id": "rtb-0c43a3f93c81fc594",
            "default_security_group_id": "sg-00e9f0e4cab65239e",
            "dhcp_options_id": "dopt-72c21f19",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00b96594fa5930e0f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c43a3f93c81fc594",
            "owner_id": "285255536600",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}